# microtar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  microtar-mmap.c  microtar-mmap.h  microtar.c  microtar.h
test/: CMakeLists.txt  test_microtar.c
